// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the menu component displays correctly when logged in 1`] = `
<nav
  className="navbar navbar-expand navbar-light fixed-top"
>
  <span
    className="mr-auto navbar-brand"
  >
    <a
      className="navbar-brand-link"
      exact={true}
      to="/"
    >
      <img
        src="GWCloud-logo-primary200.png"
        style={
          Object {
            "height": "20px",
            "margin": "-2px 2px 0 0",
          }
        }
      />
      GWCloud
    </a>
  </span>
  <div
    className="navbar-nav"
    onKeyDown={[Function]}
  >
    <span
      className="justify-content-end mr-3 navbar-text"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
            "height": "20px",
            "margin": "-2px 2px 0 0",
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
       
      Buffy Summers
    </span>
    <a
      className="nav-link"
      data-rb-event-key={null}
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
            "height": "20px",
            "margin": "-2px 2px 0 0",
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
       Logout
    </a>
  </div>
</nav>
`;

exports[`the menu component displays correctly when logged out 1`] = `
<nav
  className="navbar navbar-expand navbar-light fixed-top"
>
  <span
    className="mr-auto navbar-brand"
  >
    <a
      className="navbar-brand-link"
      exact={true}
      to="/"
    >
      <img
        src="GWCloud-logo-primary200.png"
        style={
          Object {
            "height": "20px",
            "margin": "-2px 2px 0 0",
          }
        }
      />
      GWCloud
    </a>
  </span>
  <div
    className="navbar-nav"
    onKeyDown={[Function]}
  >
    <a
      exact={true}
      to="/auth/"
    >
      Login
    </a>
  </div>
</nav>
`;
